--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ a{
     max-width: 90%;
     margin: 0 auto;
     margin-bottom: 50px;
+    overflow: hidden;
 }
 
 .project-item:nth-child(4){
@@ -136,6 +137,7 @@ a{
 .project-img{
     border-radius: 0px 6px 6px 0px;
     max-width: 100%;
+
 }
 
 .project-item-content{
