--- a/styles.css
+++ b/styles.css
@@ -685,6 +685,35 @@ a{
     position: relative;
 }
 
+.loader{
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 500px;
+    width: 100%;
+}
+
+.loader i{
+    background: white !important;
+    color: #2CCDA8 !important;
+    font-size: 60px !important;
+    animation: rotate;
+    transition: all 0.5s;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes rotate {
+    0%{
+        transform: rotate(0deg);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
 .slider-img{
     max-width: 100%;
     min-width: 100%;
