--- a/styles.css
+++ b/styles.css
@@ -337,7 +337,7 @@ a{
 /*footer*/
 
 .footer{
-    background: linear-gradient(to bottom, #ffffff 0%, var(--primary-color) 100%);
+    background: linear-gradient(to bottom, #AAB4B7 0%, var(--primary-color) 100%);
     padding: 80px 0;
     color: var(--secondary-color);
     position: relative;
@@ -615,127 +615,7 @@ a{
 }
 
 
-/*about me*/
-.about-me-header{
-    width: 100%;
-    height: 80vh;
-    position: relative;
-    display: grid;
-    grid-template-columns: 2.25fr 1fr;
-}
 
-.white-bg{
-    background: rgba(245, 245, 245, 0.6);
-    padding: 70px 100px;
-}
-
-.white-bg-top{
-    margin-bottom: 70px;
-}
-
-.white-bg .btn{
-    background: var(--primary-color);
-    border: 3px solid var(--primary-color);
-    color: white;
-}
-
-.desc{
-    font-weight: bold;
-    color: var(--primary-color);
-    max-width: 50%;
-    margin-top: 30px;
-    font-size: 18px;
-}
-.transparent-bg{
-   background: linear-gradient(to right bottom, rgba(219, 219, 219, 0.5), rgba(115, 155, 155, 0.5));
-   display: flex;
-   justify-content: center;
-   align-items: center;
-
-}
-
-.image-container{
-    position: relative;
-    width: 400px;
-    height: auto;
-    transform: translate(-150px, -20px);
-}
-
-.ralph-main-img{
-    height: 100%;
-    width: 100%;
-}
-
-.ny-img{
-    position: absolute;
-    width: 250px;
-    height: auto;
-    left: -70px;
-    bottom: -50px;
-}
-
-/*about section */
-
-.about-section{
-    max-width: 100% !important;
-    padding: 70px 0;
-    background: linear-gradient(to bottom right, #fff 0%, var(--primary-color) 100%);
-}
-
-.about-container{
-    max-width: 95%;
-    margin: 0 auto;
-}
-
-.about-container .title{
-    color: var(--primary-color);
-    margin-left: 0%;
-}
-
-.about-item p, .about-item .title, .my-bio{
-    padding-left: 100px;
-}
-
-.about-item p{
-    font-size: 30px;
-    color: #707070;
-}
-
-.about-heading{
-    font-size: 70px;
-    color: var(--primary-color);
-}
-
-.about-item img{
-    max-width: 100%;
-
-}
-
-.about-content{
-    color: #181818;
-    font-size: 30px;
-    margin-bottom: 20px;
-}
-
-.about-gallery{
-   display: grid;
-   grid-template-columns: 1.6fr 1fr;
-  
-} 
-
-.about-gallery > *{
-    max-width: 100%;
-    min-width: 100%;
-    padding: 0;
-}
-
-.about-gallery-main img{
-    max-width: 100%;
-    min-width: 1fr;
-    height: auto;
-    display: block;
-    padding: 0;
-}
 
 /*SLIDER PAGE*/
 .slider-section{
