--- a/aboutme.css
+++ b/aboutme.css
@@ -6,7 +6,7 @@
 
 .about-me-header{
     width: 100%;
-    height: 80vh;
+    height: 85vh;
     position: relative;
     display: grid;
     grid-template-columns: 2.25fr 1fr;
@@ -130,6 +130,10 @@
     padding: 0;
 }
 
+.my-bio{
+    margin-bottom: 50px;
+}
+
 .about-gallery-images img:first-child{
     margin-bottom: 30px;
 }
@@ -146,8 +150,18 @@
     padding-right: 70px;
 }
 
+@media(max-width: 1200px){
+    body{
+        border: 3px solid purple;
+    }
+}
+
 
 @media(max-width: 992px){
+    body{
+        border: 3px solid greenyellow;
+    }
+
     .about-me-header{
         width: 100%;
         height: auto;
@@ -179,10 +193,12 @@
     .desc{
         max-width: 100%;
         margin-bottom: 50px;
+        font-size: 32px;
     }
 
     .transparent-bg{
         flex-direction: column;
+        padding-bottom: 50px;
      }
 
      .image-container{
@@ -211,16 +227,25 @@
        padding: 0 7%;
     }
 
+    .about-content{
+        font-size: 24px;
+    }
+
+    .about-item p, .about-item .title, .my-bio{
+        padding-left: 0px;
+    }
+
+    .padding-right{
+        padding-right: 0px;
+    }
+
 }
 
 @media(max-width: 768px){
-    
-}
+    body{
+        border: 3px solid red;
+    }
 
-
-
-
-@media(max-width: 600px){
 
     .ny-img{
         width: 180px;
@@ -229,17 +254,14 @@
         bottom: -100px;
     }
 
+    .desc{
+        font-size: 28px;
+    }
+
     .about-section{
         background: rgb(245, 244, 244);
     }
 
-    .padding-right{
-        padding-right: 0px;
-    }
-
-    .about-item p, .about-item .title, .my-bio{
-        padding-left: 0px;
-    }
 
     .about-content{
         font-size: 18px;
@@ -260,4 +282,17 @@
      .about-gallery-images img:first-child{
          margin-bottom: 10px;
      }
+}
+
+
+
+
+@media(max-width: 600px){
+
+    body{
+        border: 3px solid orange;
+    }
+
+
+    
 }
