--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ a{
 
 .header{
     width: 100%;
-    height: 80vh;
+    height: 85vh;
     background: linear-gradient(to bottom right, #ffffff 0%, #004e4e 100%);
     padding: 70px 100px;
     position: relative;
@@ -68,12 +68,13 @@ a{
     position: absolute;
     right: 7%;
     top: 45%;
+    z-index: 999;
 }
 
 .main-heading{
     color: #333333;
     font-weight: bolder;
-    font-size: 142px;
+    font-size: 120px;
 }
 
 .sub-heading{
@@ -106,6 +107,17 @@ a{
     max-width: 100%;
     margin: 0 auto;
     padding: 20px 0px 0px;
+    position: relative;
+}
+
+.shadow-text{
+    position: absolute;
+    top: -400px;
+    left: 5%;
+    font-size: 250px;
+    color: transparent;
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.1);
+    z-index: 0;
 }
 
 
@@ -309,7 +321,7 @@ a{
 
 .skills-section{
     background: var(--primary-color);
-    padding: 220px 0;
+    padding: 220px 0 150px;
     position: relative;
 }
 
@@ -354,7 +366,6 @@ a{
 
 .footer .title{
     color: var(--primary-color);
-    font-size: 50px;
 }
 
 .contact-item{
@@ -381,7 +392,28 @@ a{
     margin-bottom: 10px;
 }
 
+@media(max-width: 1200px){
+
+    .skills-grid{
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 30px;
+    }
+
+    .shadow-text{
+        top: -350px;
+        font-size: 200px;
+    }
+
+    .main-heading{
+        font-size: 80px;
+    }
+}
+
 @media(max-width: 992px){
+    .title{
+        font-size: 40px;
+    }
+
     .header{
         height: auto;
         min-height: 80vh;
@@ -430,6 +462,11 @@ a{
         text-align: center;
     }
 
+    .shadow-text{
+        top: -275px;
+        font-size: 160px;
+    } 
+
     .memoji-1{
         position: absolute;
         top: -247px;
@@ -470,17 +507,6 @@ a{
 
 
 @media(max-width: 768px){
-    .header{
-        /*border: 3px solid red;*/
-        height: auto;
-        padding: 70px 7%;
-    }
-
-    .header-content{
-       /* border: 2px solid red;*/
-        max-width: 90%;
-        margin: 0 auto;
-    }
 
     .title{
         font-size: 42px;
@@ -540,8 +566,8 @@ a{
         top: 60px;
         height: 0px;
         background: white;
-        border-top: 1px solid rgb(150, 150, 150);
-        border-bottom: 1px solid rgb(150, 150, 150);
+        border-top: 1px solid rgb(245, 245, 245);
+        border-bottom: 1px solid rgb(245, 245, 245);
         width: 100%;
         transition: all 0.4s;
         overflow: hidden;
@@ -557,12 +583,30 @@ a{
     }
 
     .header{
-        width: 100%;
-        height: 80vh;
-        background: linear-gradient(to bottom right, #ffffff 0%, #004e4e 100%);
-        padding: 0px;
-        padding-top: 60px;
+        height: auto;
+        padding: 70px 7%;
     }
+
+    .main-heading{
+        font-size: 60px;
+    }
+
+    .header-content{
+        max-width: 90%;
+        margin: 0 auto;
+    }
+
+
+    .header .socials{
+        position: absolute;
+        right: 7%;
+        top: 60%;
+    }
+
+    .header .socials img{
+        width: 40px;
+    }
+
     
     .sub-heading{
         font-size: 18px;
@@ -573,10 +617,12 @@ a{
         width: 100%;
         text-align: center;
     }
+
+    .shadow-text{
+        top: -200px;
+        font-size: 120px;
+    }
     
-    
-    /*projects section*/
-   
 
     .case-display-section{
         grid-template-columns: 1fr;
@@ -633,14 +679,11 @@ a{
 }
 
 @media(max-width: 600px){
-    .header{
-       /* border: 3px solid orange;*/
-    }
-
-     
+  
     .main-heading{
         font-size: 50px;
     }
+
 
     .project-item-content{
         padding: 40px;
@@ -664,11 +707,17 @@ a{
         margin-top: 20px;
     }
 
-    
-    
+
+    .footer .title, .footer-container{
+        padding: 0 5%;
+    }
 
 }
 
-
-
+@media(max-width: 500px){
+.shadow-text{
+    top: -170px;
+    font-size: 90px;
+}
+}
 
